# snake-game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md
.github/workflows/: snake_game-action.yml
include/: my_snakegame.h  ui_snakegame.h
src/: main.cpp  my_snakegame.cpp  snakegame.ui
